--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<aside class="sidebar">
+<aside class="sidebar indigo">
   <header>
     <div class="about">
       <div class="cover-author-image">
