--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,5 +8,9 @@
   </div>
   
   {% include analytics.html %}
+  /* mathjax 추가 */
+  {% if page.use_math %}
+    {% include mathjax_support.html %}
+  {% endif %}
 </body>
 </html>
