--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,16 +1,18 @@
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 <head>
 	<meta charset="utf-8">
 	<title>{% if page.title %}{{page.title}} - {{site.title}}{% else %}{{site.title}}{% endif %}</title>
 
   <!-- Edit site and author settings in `_config.yml` to make the social details your own -->
-
+  {% if page.use_math %}
+    {% include mathjax_support.html %}
+  {% endif %}
     <meta content="{{ site.title }}" property="og:site_name">
   {% if page.title %}
     <meta content="{{ page.title }}" property="og:title">
   {% else %}
     <meta content="{{ site.title }}" property="og:title">
   {% endif %}
+  
   {% if page.title %}
     <meta content="article" property="og:type">
   {% else %}
@@ -87,4 +89,4 @@
 	<!-- Styles -->
 	<link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
 </head>
-</script>
+
