--- a/_includes/head.html
+++ b/_includes/head.html
@@ -46,18 +46,18 @@
   {% if page.mathjax %}
     <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
-      TeX: { equationNumbers: {
-      	autoNumber: "AMS" } }
-      },
     tex2jax: {
     inlineMath: [ ['$', '$'] ],
     displayMath: [ ['$$', '$$'] ],
     processEscapes: true,
+      },
+      TeX: { equationNumbers: {
+      	autoNumber: "AMS" } }
       }
      });
     </script>
     <script type="text/javascript" async 
-       src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+       src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML">
     </script>
   {% endif %}
     <meta name="twitter:card" content="summary">
