--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,22 @@ layout: main
         <h1 class="page-title">{{page.title}}</h1>
         <div class="page-date"><span>{{page.date | date: '%Y, %b %d'}}&nbsp;&nbsp;&nbsp;&nbsp;</span></div>
       </header>
+      {% if page.mathjax %}
+        <script type="text/x-mathjax-config">
+          MathJax.Hub.Config({
+                tex2jax: {
+                inlineMath: [ ['$', '$'] ],
+                displayMath: [ ['$$', '$$'] ],
+                processEscapes: true,
+                  },
+                  TeX: { equationNumbers: {
+                    autoNumber: "AMS" } }
+                  }
+                 });
+        </script>
+        <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML">
+        </script>
+      {% endif %}
       {{content | markdownify}}
       <div class="page-footer">
         <div class="page-share">
